# PlaneGame

./: CMakeLists.txt  README.md  sound1.qrc
src/: Health.cc  Health.h  MyRect.cc  MyRect.h  Score.cc  Score.h  bullet.cc  bullet.h  enemy.cc  enemy.h  game.cc  game.h  main.cc  sound.qrc  sound1.qrc
